--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
@@ -31,5 +31,6 @@
   "sn22.80:6.1": "„Das Almosenbetteln, Mönche und Nonnen, ist ein extremer Lebensstil. ",
   "sn22.80:6.2": "Die Welt verflucht euch: ‚Du Bettler, du gehst herum mit der Schale in der Hand!‘ ",
   "sn22.80:6.3": "Doch ernsthafte ehrbare Menschen greifen dazu aus gutem Grund: ",
-  "sn22.80:6.4": "Nicht, weil sie von einem König oder Räuber dazu gezwungen wurden oder weil sie Schulden haben oder bedroht werden oder um sich so den Lebenserwerb zu sichern, "
+  "sn22.80:6.4": "Nicht, weil sie von einem König oder Räuber dazu gezwungen wurden oder weil sie Schulden haben oder bedroht werden oder um sich so den Lebenserwerb zu sichern, ",
+  "sn22.80:6.5": "sondern weil sie in Wiedergeburt, Alter und Tod versunken sind, in Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis; weil sie im Leiden versunken sind, ins Leiden verstrickt. "
 }
