--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
@@ -34,5 +34,6 @@
   "sn22.80:6.4": "Nicht, weil sie von einem König oder Räuber dazu gezwungen wurden oder weil sie Schulden haben oder bedroht werden oder um sich so den Lebenserwerb zu sichern, ",
   "sn22.80:6.5": "sondern weil sie in Wiedergeburt, Alter und Tod versunken sind, in Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis; weil sie im Leiden versunken sind, ins Leiden verstrickt. ",
   "sn22.80:6.6": "Und sie denken: ‚Hoffentlich kann ich ein Ende dieser ganzen Masse des Leidens finden.‘ ",
-  "sn22.80:7.1": "So ist dieser ehrbare Mensch fortgezogen. "
+  "sn22.80:7.1": "So ist dieser ehrbare Mensch fortgezogen. ",
+  "sn22.80:7.2": "Dennoch begehrt er Sinnenfreuden; er ist voller heftiger Begierde, bösen Willens und böswilliger Absicht. Er ist unachtsam, ohne Umsicht und Versenkung, mit schweifendem Geist und unbeherrschten Sinnen. "
 }
