--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
@@ -35,5 +35,6 @@
   "sn22.80:6.5": "sondern weil sie in Wiedergeburt, Alter und Tod versunken sind, in Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis; weil sie im Leiden versunken sind, ins Leiden verstrickt. ",
   "sn22.80:6.6": "Und sie denken: ‚Hoffentlich kann ich ein Ende dieser ganzen Masse des Leidens finden.‘ ",
   "sn22.80:7.1": "So ist dieser ehrbare Mensch fortgezogen. ",
-  "sn22.80:7.2": "Dennoch begehrt er Sinnenfreuden; er ist voller heftiger Begierde, bösen Willens und böswilliger Absicht. Er ist unachtsam, ohne Umsicht und Versenkung, mit schweifendem Geist und unbeherrschten Sinnen. "
+  "sn22.80:7.2": "Dennoch begehrt er Sinnenfreuden; er ist voller heftiger Begierde, bösen Willens und böswilliger Absicht. Er ist unachtsam, ohne Umsicht und Versenkung, mit schweifendem Geist und unbeherrschten Sinnen. ",
+  "sn22.80:7.3": "Wie eine Fackel zum Anzünden eines Scheiterhaufens für eine Bestattung, die an beiden Enden brennt und in der Mitte mit Mist bestrichen ist: Weder im Dorf noch in der Wildnis könnte sie als Bauholz verwendet werden. "
 }
