--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
@@ -39,5 +39,6 @@
   "sn22.80:7.3": "Wie eine Fackel zum Anzünden eines Scheiterhaufens für eine Bestattung, die an beiden Enden brennt und in der Mitte mit Mist bestrichen ist: Weder im Dorf noch in der Wildnis könnte sie als Bauholz verwendet werden. ",
   "sn22.80:7.4": "Ich sage, dieser Mensch ist gerade wie diese Fackel: Er hat die Freuden des Laienlebens verpasst und hat das Ziel des Asketenlebens nicht erfüllt. ",
   "sn22.80:8.1": "Mönche und Nonnen, es gibt drei Arten untauglicher Gedanken: ",
-  "sn22.80:8.2": "sinnliche, boshafte und grausame Gedanken. "
+  "sn22.80:8.2": "sinnliche, boshafte und grausame Gedanken. ",
+  "sn22.80:8.3": "Und wo hören diese drei untauglichen Gedanken restlos auf? "
 }
