--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
@@ -41,5 +41,6 @@
   "sn22.80:8.1": "Mönche und Nonnen, es gibt drei Arten untauglicher Gedanken: ",
   "sn22.80:8.2": "sinnliche, boshafte und grausame Gedanken. ",
   "sn22.80:8.3": "Und wo hören diese drei untauglichen Gedanken restlos auf? ",
-  "sn22.80:8.4": "Sie hören bei denen auf, die ihren Geist fest in den vier Arten der Achtsamkeitsmeditation verankert haben oder die die merkmalslose Versenkung entwickeln. "
+  "sn22.80:8.4": "Sie hören bei denen auf, die ihren Geist fest in den vier Arten der Achtsamkeitsmeditation verankert haben oder die die merkmalslose Versenkung entwickeln. ",
+  "sn22.80:8.5": "Eben das ist Anreiz genug, um die merkmalslose Versenkung zu entwickeln. "
 }
