--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
@@ -51,5 +51,6 @@
   "sn22.80:9.5": "Er versteht: ",
   "sn22.80:9.6": "‚Es gibt nichts in der Welt, das ich ergreifen könnte und das ohne Fehler wäre. ",
   "sn22.80:9.7": "Denn wenn ich ergreife, würde ich nur Form, Gefühl, ",
-  "sn22.80:9.8": "Wahrnehmung, "
+  "sn22.80:9.8": "Wahrnehmung, ",
+  "sn22.80:9.9": "Entscheidungen oder Bewusstsein ergreifen. "
 }
