--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
@@ -58,5 +58,6 @@
   "sn22.80:9.12": "Wiedergeburt ist eine Bedingung für das Zustandekommen von Alter und Tod, Kummer, Klage, Schmerz, Traurigkeit und Bedrängnis. ",
   "sn22.80:9.13": "So kommt diese ganze Masse des Leidens zustande. ",
   "sn22.80:10.1": "Was meint ihr, Mönche und Nonnen? ",
-  "sn22.80:10.2": "Ist Form beständig oder unbeständig?“ "
+  "sn22.80:10.2": "Ist Form beständig oder unbeständig?“ ",
+  "sn22.80:10.3": "„Unbeständig, Herr.“ "
 }
