--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
@@ -60,5 +60,6 @@
   "sn22.80:10.1": "Was meint ihr, Mönche und Nonnen? ",
   "sn22.80:10.2": "Ist Form beständig oder unbeständig?“ ",
   "sn22.80:10.3": "„Unbeständig, Herr.“ ",
-  "sn22.80:10.4": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ "
+  "sn22.80:10.4": "„Aber wenn es unbeständig ist, ist es Leiden oder Glück?“ ",
+  "sn22.80:10.5": "„Leiden, Herr.“ "
 }
