--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
@@ -68,5 +68,6 @@
   "sn22.80:10.9": "Ist Gefühl …“ … ",
   "sn22.80:10.10": "„Ist Wahrnehmung …“ … ",
   "sn22.80:10.11": "„Sind Entscheidungen …“ … ",
-  "sn22.80:10.12": "„Ist Bewusstsein beständig oder unbeständig?“ … "
+  "sn22.80:10.12": "„Ist Bewusstsein beständig oder unbeständig?“ … ",
+  "sn22.80:10.13": "„Daher solltet ihr jegliche Art von Form … "
 }
