--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
@@ -9,7 +9,7 @@
   "sn22.80:2.1": "Da kam ihm, als er für sich allein in Klausur war, dieser Gedanke in den Sinn: ",
   "sn22.80:2.2": "„Ich habe den Saṅgha der Mönche und Nonnen fortgeschickt. ",
   "sn22.80:2.3": "Doch da sind Mönche und Nonnen, die neu im Orden sind, kürzlich fortgezogen und neu zu dieser Lehre und Schulung gekommen. ",
-  "sn22.80:2.4": "Wenn sie mich nicht sehen, könnten sie sich ändern und zugrunde gehen. ",
+  "sn22.80:2.4": "Wenn sie mich nicht sehen, könnten sie verfallen und zugrunde gehen. ",
   "sn22.80:2.5": "Wie ein junges Kalb, das seine Mutter nicht sieht: Es könnte sich ändern und zugrunde gehen. … ",
   "sn22.80:2.7": "Oder wie junge Setzlinge, die kein Wasser bekommen: Sie könnten sich ändern und zugrunde gehen. ",
   "sn22.80:2.8": "Ebenso sind da Mönche und Nonnen, die neu im Orden sind, kürzlich fortgezogen und neu zu dieser Lehre und Schulung gekommen. ",
