--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
@@ -13,7 +13,7 @@
   "sn22.80:2.5": "Wie ein junges Kalb, das seine Mutter nicht sieht: Es könnte verfallen und zugrunde gehen. … ",
   "sn22.80:2.7": "Oder wie junge Setzlinge, die kein Wasser bekommen: Sie könnten verfallen und zugrunde gehen. ",
   "sn22.80:2.8": "Ebenso sind da Mönche und Nonnen, die neu im Orden sind, kürzlich fortgezogen und neu zu dieser Lehre und Schulung gekommen. ",
-  "sn22.80:2.9": "Wenn sie mich nicht sehen, könnten sie sich ändern und zugrunde gehen. ",
+  "sn22.80:2.9": "Wenn sie mich nicht sehen, könnten sie verfallen und zugrunde gehen. ",
   "sn22.80:2.10": "Warum unterstütze ich den Saṅgha der Mönche und Nonnen nicht jetzt genauso wie früher?“ ",
   "sn22.80:3.1": "Da erkannte Brahmā Sahampati, was der Buddha dachte. Und so leicht, wie eine starke Person den Arm strecken oder beugen würde, verschwand er aus der Brahmāwelt und erschien wieder vor dem Buddha. ",
   "sn22.80:3.2": "Er ordnete seine Robe über einer Schulter, erhob seine zusammengelegten Hände zum Buddha und sagte: ",
