--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
@@ -22,7 +22,7 @@
   "sn22.80:3.5": "Doch da sind Mönche und Nonnen, die neu im Orden sind, kürzlich fortgezogen und neu zu dieser Lehre und Schulung gekommen. … ",
   "sn22.80:3.11": "Dass doch der Buddha am Saṅgha der Mönche und Nonnen Freude hätte! ",
   "sn22.80:3.12": "Dass doch der Buddha den Saṅgha der Mönche und Nonnen willkommen hieße! ",
-  "sn22.80:3.13": "Dass doch der Buddha den Saṅgha der Mönche und Nonnen jetzt genauso unterstütze wie früher!“ ",
+  "sn22.80:3.13": "Dass doch der Buddha den Saṅgha der Mönche und Nonnen jetzt genauso unterstützte wie früher!“ ",
   "sn22.80:4.1": "Der Buddha schwieg zum Zeichen der Zustimmung. ",
   "sn22.80:4.2": "Und als der Große Brahmā erkannte, dass der Buddha zugestimmt hatte, verbeugte er sich, umrundete den Buddha respektvoll, die rechte Seite ihm zugewandt, und verschwand eben dort. ",
   "sn22.80:5.1": "Da kam der Buddha am späten Nachmittag aus seiner Klausur, ging zum Banyanbaum-Kloster und setzte sich auf den ausgebreiteten Sitz. ",
