--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
@@ -24,7 +24,7 @@
   "sn22.80:3.12": "Dass doch der Buddha den Saṅgha der Mönche und Nonnen willkommen hieße! ",
   "sn22.80:3.13": "Dass doch der Buddha den Saṅgha der Mönche und Nonnen jetzt genauso unterstützte wie früher!“ ",
   "sn22.80:4.1": "Der Buddha schwieg zum Zeichen der Zustimmung. ",
-  "sn22.80:4.2": "Und als der Große Brahmā erkannte, dass der Buddha zugestimmt hatte, verbeugte er sich, umrundete den Buddha respektvoll, die rechte Seite ihm zugewandt, und verschwand eben dort. ",
+  "sn22.80:4.2": "Und als Brahmā Sahampati erkannte, dass der Buddha zugestimmt hatte, verbeugte er sich, umrundete den Buddha respektvoll, die rechte Seite ihm zugewandt, und verschwand eben dort. ",
   "sn22.80:5.1": "Da kam der Buddha am späten Nachmittag aus seiner Klausur, ging zum Banyanbaum-Kloster und setzte sich auf den ausgebreiteten Sitz. ",
   "sn22.80:5.2": "Darauf setzte er seine Wunderkräfte ein und veranlasste, dass die Mönche und Nonnen unsicher zu ihm kamen, allein oder zu zweit. ",
   "sn22.80:5.3": "Diese Mönche und Nonnen begaben sich unsicher zum Buddha, verbeugten sich und setzten sich zur Seite hin. Der Buddha sagte zu ihnen: ",
