--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.80_translation-de-sabbamitta.json
@@ -62,7 +62,7 @@
   "sn22.80:10.3": "„Unbeständig, Herr.“ ",
   "sn22.80:10.4": "„Aber wenn sie unbeständig ist, ist sie Leiden oder Glück?“ ",
   "sn22.80:10.5": "„Leiden, Herr.“ ",
-  "sn22.80:10.6": "„Aber wenn es unbeständig und Leiden ist und zugrunde gehen muss, kann man es dann so ansehen: ",
+  "sn22.80:10.6": "„Aber wenn sie unbeständig und Leiden ist und zugrunde gehen muss, kann man sie dann so ansehen: ",
   "sn22.80:10.7": "‚Das ist mein, das bin ich, das ist mein Selbst‘?“ ",
   "sn22.80:10.8": "„Nein, Herr.“ ",
   "sn22.80:10.9": "„Ist Gefühl …“ … ",
