--- a/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn46/sn46.54_translation-de-sabbamitta.json
@@ -1,3 +1,4 @@
 {
-  "sn46.54:0.1": "Verbundene Lehrreden 46.54 "
+  "sn46.54:0.1": "Verbundene Lehrreden 46.54 ",
+  "sn46.54:0.2": "6. Das Kapitel über Diskutieren "
 }
