--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -220,11 +220,11 @@
   "pli-tv-kd11:8.2.15": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:8.2.16": "For the third time I speak on this matter. ",
   "pli-tv-kd11:8.2.17": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:8.2.18": "The Sangha has done a legal procedure of condemnation against these monks Paṇḍuka and Lohitaka. They have conducted themselves properly and suitably so as to deserve to be released, and now ask for that legal procedure to be lifted. ",
-  "pli-tv-kd11:8.2.19": "The Sangha lifts the legal procedure of condemnation against the monks Paṇḍuka and Lohitaka. ",
+  "pli-tv-kd11:8.2.18": "The Sangha has done a legal procedure of condemnation against these monks Paṇḍuka and Lohitaka. They’re now conducting themselves properly and suitably, and deserve to be released. They’re asking for that legal procedure to be lifted. ",
+  "pli-tv-kd11:8.2.19": "The Sangha lifts that legal procedure of condemnation against the monks Paṇḍuka and Lohitaka. ",
   "pli-tv-kd11:8.2.20": "Any monk who approves of lifting that legal procedure should remain silent. ",
   "pli-tv-kd11:8.2.21": "Any monk who doesn’t approve should speak up. ",
-  "pli-tv-kd11:8.2.22": "The Sangha has lifted the legal procedure of condemnation against the monks Paṇḍuka and Lohitaka. ",
+  "pli-tv-kd11:8.2.22": "The Sangha has lifted that legal procedure of condemnation against the monks Paṇḍuka and Lohitaka. ",
   "pli-tv-kd11:8.2.23": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd11:8.2.24": "The first section on the legal procedure of condemnation is finished. ",
   "pli-tv-kd11:9.1.0": "2. The legal procedure of demotion ",
