--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -257,7 +257,7 @@
   "pli-tv-kd11:9.2.8": "instructing him to live with formal support. ",
   "pli-tv-kd11:9.2.9": "This is the motion. ",
   "pli-tv-kd11:9.2.10": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:9.2.11": "The monk Seyyasaka is ignorant and incompetent, often committing offenses, and lacking in boundaries. ",
+  "pli-tv-kd11:9.2.11": "This monk Seyyasaka is ignorant and incompetent, often committing offenses, and lacking in boundaries. ",
   "pli-tv-kd11:9.2.12": "He’s constantly and improperly socializing with householders. ",
   "pli-tv-kd11:9.2.13": "In addition, the monks regularly give him probation, send him back to the beginning, give him the trial period, and rehabilitate him. ",
   "pli-tv-kd11:9.2.14": "The Sangha does a legal procedure of demotion against the monk Seyyasaka, ",
