--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -268,7 +268,7 @@
   "pli-tv-kd11:9.2.19": "For the second time I speak on this matter. … ",
   "pli-tv-kd11:9.2.20": "For the third time I speak on this matter. ",
   "pli-tv-kd11:9.2.21": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:9.2.22": "The monk Seyyasaka is ignorant and incompetent, often committing offenses, and lacking in boundaries. ",
+  "pli-tv-kd11:9.2.22": "This monk Seyyasaka is ignorant and incompetent, often committing offenses, and lacking in boundaries. ",
   "pli-tv-kd11:9.2.23": "He’s constantly and improperly socializing with householders. ",
   "pli-tv-kd11:9.2.24": "In addition, the monks regularly give him probation, send him back to the beginning, give him the trial period, and rehabilitate him. ",
   "pli-tv-kd11:9.2.25": "The Sangha does a legal procedure of demotion against the monk Seyyasaka, ",
