--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -365,7 +365,7 @@
   "pli-tv-kd11:10.1.110": "He shouldn’t cancel the observance-day ceremony of a regular monk. ",
   "pli-tv-kd11:10.1.111": "He shouldn’t cancel the invitation ceremony of a regular monk. ",
   "pli-tv-kd11:10.1.112": "He shouldn’t direct a regular monk. ",
-  "pli-tv-kd11:10.1.113": "He shouldn’t give instructions to a regular monk from a position of authority. ",
+  "pli-tv-kd11:10.1.113": "He shouldn’t give instructions to a regular monk. ",
   "pli-tv-kd11:10.1.114": "He shouldn’t get permission from a regular monk to correct him. ",
   "pli-tv-kd11:10.1.115": "He shouldn’t accuse a regular monk of an offense. ",
   "pli-tv-kd11:10.1.116": "He shouldn’t remind a regular monk of an offense. ",
