--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -387,7 +387,7 @@
   "pli-tv-kd11:11.2.5": "he commits the same offense for which the Sangha did the procedure of demotion against him; he commits an offense similar to the one for which the Sangha did the procedure of demotion against him; he commits an offense worse than the one for which the Sangha did the procedure of demotion against him; ",
   "pli-tv-kd11:11.2.6": "he criticizes the procedure; he criticizes those who did the procedure. ",
   "pli-tv-kd11:11.2.8": "When a monk has eight qualities, a legal procedure of demotion against him shouldn’t be lifted: ",
-  "pli-tv-kd11:11.2.9": "he cancels the observance-day ceremony of a regular monk; he cancels the invitation ceremony of a regular monk; he directs a regular monk; he gives instructions to a regular monk from a position of authority; he gets permission from a regular monk to correct him; he accuses a regular monk of an offense; he reminds a regular monk of an offense; he associates inappropriately with other monks.” ",
+  "pli-tv-kd11:11.2.9": "he cancels the observance-day ceremony of a regular monk; he cancels the invitation ceremony of a regular monk; he directs a regular monk; he gives instructions to a regular monk; he gets permission from a regular monk to correct him; he accuses a regular monk of an offense; he reminds a regular monk of an offense; he associates inappropriately with other monks.” ",
   "pli-tv-kd11:11.2.11": "The group of eighteen on not to be lifted is finished. ",
   "pli-tv-kd11:11.2.12.0": "2.6 The group of eighteen on to be lifted ",
   "pli-tv-kd11:11.2.12.1": "“When a monk has five qualities, a legal procedure of demotion against him should be lifted: ",
