--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -405,7 +405,7 @@
   "pli-tv-kd11:12.1.5": "and a third time. ",
   "pli-tv-kd11:12.2.1": "A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd11:12.2.2": "‘Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:12.2.3": "The Sangha has done a legal procedure of demotion against the monk Seyyasaka. He has conducted himself properly and suitably so as to deserve to be released, and now asks for that legal procedure to be lifted. ",
+  "pli-tv-kd11:12.2.3": "The Sangha has done a legal procedure of demotion against the monk Seyyasaka. He’s now conducting himself properly and suitably, and deserves to be released. He’s asking for that legal procedure to be lifted. ",
   "pli-tv-kd11:12.2.4": "If it seems appropriate to the Sangha, the Sangha should lift the legal procedure of demotion against the monk Seyyasaka. ",
   "pli-tv-kd11:12.2.5": "This is the motion. ",
   "pli-tv-kd11:12.2.6": "Please, Venerables, I ask the Sangha to listen. ",
