--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -409,8 +409,8 @@
   "pli-tv-kd11:12.2.4": "If it seems appropriate to the Sangha, the Sangha should lift that legal procedure of demotion against the monk Seyyasaka. ",
   "pli-tv-kd11:12.2.5": "This is the motion. ",
   "pli-tv-kd11:12.2.6": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:12.2.7": "The Sangha has done a legal procedure of demotion against the monk Seyyasaka. He has conducted himself properly and suitably so as to deserve to be released, and now asks for that legal procedure to be lifted. ",
-  "pli-tv-kd11:12.2.8": "The Sangha lifts the legal procedure of demotion against the monk Seyyasaka. ",
+  "pli-tv-kd11:12.2.7": "The Sangha has done a legal procedure of demotion against the monk Seyyasaka. He’s now conducting himself properly and suitably, and deserves to be released. He’s asking for that legal procedure to be lifted. ",
+  "pli-tv-kd11:12.2.8": "The Sangha lifts that legal procedure of demotion against the monk Seyyasaka. ",
   "pli-tv-kd11:12.2.9": "Any monk who approves of lifting that legal procedure should remain silent. ",
   "pli-tv-kd11:12.2.10": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:12.2.11": "For the second time I speak on this matter. ",
