--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -448,7 +448,7 @@
   "pli-tv-kd11:13.3.3": "When people saw him, they said, ",
   "pli-tv-kd11:13.3.4": "“Whoʼs this, acting like a moron and always frowning? ",
   "pli-tv-kd11:13.3.5": "Whoʼs gonna give almsfood to him? ",
-  "pli-tv-kd11:13.3.6": "Almsfood should be given to our Venerables Assaji and Punabbasuka, for they are gentle, congenial, pleasant to speak with, greeting one with a smile, welcoming, friendly, open, the first to speak.” ",
+  "pli-tv-kd11:13.3.6": "Almsfood should be given to our Venerables Assaji and Punabbasuka, for they’re gentle, congenial, pleasant to speak with, greeting one with a smile, welcoming, friendly, open, the first to speak.” ",
   "pli-tv-kd11:13.3.8": "A certain lay follower saw that monk walking for alms in Kīṭāgiri. ",
   "pli-tv-kd11:13.3.9": "He approached him, bowed, and said, ",
   "pli-tv-kd11:13.3.10": "“Venerable, have you received any almsfood?” ",
